--- a/src/dev/sass/theme.scss
+++ b/src/dev/sass/theme.scss
@@ -5,7 +5,7 @@ $color-pri-med: #9EBFBB;
 $color-pri-lgt: #7F7F7F;
 
 $color-sec-med: #BFA89E;
-$color-sec-lgt: #FFE4D8;
+$color-sec-lgt: white;
 
 $font-ornate: 'Open Sans Condensed', sans-serif;
 
@@ -18,16 +18,30 @@ $font-ornate: 'Open Sans Condensed', sans-serif;
 body {
 	font-family: $font-ornate;
 	background-color: $color-pri-med;
+	overflow-y: hidden;
+}
+
+.bg-pattern {
+	background-image: url('../assets/tile.png');
+	background-repeat: repeat;
+}
+
+.bg-pluto {
+	background-image: url('../assets/pluto.jpg');
 }
 
 .bg-pri-drk {
 	background-color: $color-pri-drk;
 }
 
-#banner {
+.br-pri-lgt {
+	background-color: $color-sec-lgt;
+}
+
+.banner {
 	background-image: url('../assets/saturn.jpg');
 	font-family: $font-ornate;
-	height: 100%;
+
 	color: $color-sec-lgt;
 	text-align: center;
 	justify-content: center;
@@ -37,6 +51,14 @@ body {
 		font-size: 60px;
 
 	}
+}
+
+.slider {
+	cursor: pointer;
+}
+
+.view {
+	height: 100%;
 }
 
 #space-ship {
@@ -49,8 +71,27 @@ body {
 #planet {
 }
 
+.hide {
+	animation-name: hide;
+    animation-duration: 1s;
+}
+.show {
+	animation-name: show;
+    animation-duration: 1s;
+}
+
 @keyframes spaceshipMove {
     0% {top: 20%;}
     50% {top: 40%;}
 	100% {top: 20%;}
+}
+
+@keyframes hide {
+	from {height: 100%;}
+	to {height: 0%;}
+}
+
+@keyframes show {
+	from {height: 100%;}
+	to {height: 0%;}
 }
