--- a/src/dev/sass/theme.scss
+++ b/src/dev/sass/theme.scss
@@ -58,7 +58,7 @@ body {
 }
 
 .view {
-	height: 100%;
+	height: 100vh;
 }
 
 #space-ship {
@@ -80,6 +80,11 @@ body {
     animation-duration: 1s;
 }
 
+.panel {
+	height: 100%;
+	background-color: $color-sec-lgt;
+}
+
 @keyframes spaceshipMove {
     0% {top: 20%;}
     50% {top: 40%;}
@@ -87,11 +92,11 @@ body {
 }
 
 @keyframes hide {
-	from {height: 100%;}
+	from {height: 100vh;}
 	to {height: 0%;}
 }
 
 @keyframes show {
-	from {height: 100%;}
+	from {height: 100vh;}
 	to {height: 0%;}
 }
