--- a/src/prod/css/theme.css
+++ b/src/prod/css/theme.css
@@ -36,7 +36,7 @@ body {
   cursor: pointer; }
 
 .view {
-  height: 100%; }
+  height: 100vh; }
 
 #space-ship {
   position: absolute;
@@ -52,6 +52,10 @@ body {
   animation-name: show;
   animation-duration: 1s; }
 
+.panel {
+  height: 100%;
+  background-color: white; }
+
 @keyframes spaceshipMove {
   0% {
     top: 20%; }
@@ -62,12 +66,12 @@ body {
 
 @keyframes hide {
   from {
-    height: 100%; }
+    height: 100vh; }
   to {
     height: 0%; } }
 
 @keyframes show {
   from {
-    height: 100%; }
+    height: 100vh; }
   to {
     height: 0%; } }
